--- a/fullstack-crud-app/package.json
+++ b/fullstack-crud-app/package.json
@@ -7,6 +7,7 @@
     "cra-template": "1.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
